Navigation fixed on all the pages, navigation is now more modern and carousels look the same and function on every page. Users can now invite other users using mail adresses. Profile matches profile on features. Dark mode looks appealing now. Tested everything in the project. Databases all linked. Settings updated from page to window. Games all function. Map updated. Admin controls are all fully functioning. UI's updated.

--- a/Friends.xaml
+++ b/Friends.xaml
@@ -41,8 +41,8 @@
                 <Button Content="Delete Selected Friend" Width="200" Click="DeleteFriend_Click"/>
             </StackPanel>
 
-            <Button Content="← Back to Features" 
-                    Click="GoBackToFeatures_Click"
+            <Button Content="← Back to Homepage" 
+                    Click="GoBackToMain_Click"
                     Width="150"
                     Height="32"
                     Margin="0,10,0,0"
