--- a/LocationSubmissionsAdmin.xaml
+++ b/LocationSubmissionsAdmin.xaml
@@ -22,9 +22,9 @@
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-            <Button Content="Approve" Click="Approve_Click" Margin="3" Width="80" Padding="4,2"/>
-            <Button Content="Reject" Click="Reject_Click" Margin="3" Width="80" Padding="4,2"/>
-            <Button Content="Delete" Click="Delete_Click" Margin="3" Width="80" Padding="4,2" Background="Red" Foreground="White"/>
+            <Button Content="Approve" Click="Approve_Click" Margin="3" Width="60" Height="28" Padding="0"/>
+            <Button Content="Reject" Click="Reject_Click" Margin="3" Width="60" Height="28" Padding="0"/>
+            <Button Content="Delete" Click="Delete_Click" Margin="3" Width="60" Height="28" Padding="0" Background="Red" Foreground="White"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right">
             <Button Content="Refresh" Width="100" Margin="5" Click="Refresh_Click"/>
