--- a/Planner.xaml
+++ b/Planner.xaml
@@ -56,10 +56,10 @@
             <StackPanel Grid.Column="2" 
                         Orientation="Horizontal" 
                         HorizontalAlignment="Right">
-                <Button Content="Back to Settings" 
+                <Button Content="Back to Homepage" 
                         Style="{StaticResource ModernButton}"
                         Margin="0,0,10,0"
-                        Click="BackToSettings_Click"/>
+                        Click="BackToMain_Click"/>
             </StackPanel>
         </Grid>
 
